Update dependencies, small parsing improvements